Updated icons & splash screen Fix gpr problems Reorganization of GPR and CSV tabs Chart selection Color settings