@@ -20,7 +20,6 @@ import com.github.thecoldwine.sigrun.common.ext.ResourceImageHolder;
 import com.github.thecoldwine.sigrun.common.ext.SgyFile;
 import com.github.thecoldwine.sigrun.common.ext.Trace;
 import com.ugcs.gprvisualizer.app.Broadcast;
-import com.ugcs.gprvisualizer.app.Sout;
 import com.ugcs.gprvisualizer.app.commands.CommandRegistry;
 import com.ugcs.gprvisualizer.app.commands.RadarMapScan;
 import com.ugcs.gprvisualizer.gpr.ArrayBuilder;
@@ -53,6 +52,13 @@ import javafx.scene.layout.VBox;
 public class RadarMap extends BaseLayer implements InitializingBean {
 
 	private static final double MIN_CIRCLE_THRESHOLD = 2.0;
+
+	private static final String BORDER_STYLING = """
+		-fx-border-color: gray; 
+		-fx-border-insets: 5;
+		-fx-border-width: 1;
+		-fx-border-style: solid;
+		""";
 	
 	@Autowired
 	private Model model;
@@ -68,7 +74,6 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 	private BaseSlider thresholdSlider;
 	private BaseSlider radiusSlider;
 	private BaseCheckBox autoGainCheckbox;
-	private VBox vertBox = new VBox();
 	
 	private ArrayBuilder scaleArrayBuilder;
 	private ArrayBuilder autoArrayBuilder;
@@ -82,7 +87,7 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 		public void handle(ActionEvent event) {
 
 			setActive(showMapButtonAlg.isSelected() || showMapButtonAmp.isSelected());
-			vertBox.setDisable(!isActive());
+			//vertBox.setDisable(!isActive());
 			
 			
 			if (showMapButtonAlg.isSelected()) {
@@ -105,8 +110,8 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 	};
 	
 	ToggleGroup group = new ToggleGroup();
-	private ToggleButton showMapButtonAmp = 
-			new ToggleButton("", ResourceImageHolder.getImageView("light-20.png"));
+	private ToggleButton showMapButtonAmp = ResourceImageHolder.setButtonImage(ResourceImageHolder.LIGHT, new ToggleButton());
+			//new ToggleButton("", ResourceImageHolder.getImageView("light-20.png"));
 	
 	{
 		showMapButtonAmp.setTooltip(new Tooltip("Toggle amplitude map layer"));
@@ -200,14 +205,7 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 		radiusSlider = new RadiusSlider(settings, sliderListener);
 		
 		autoGainCheckbox = new AutoGainCheckbox(settings, autoGainListener);
-		
-		String cssLayout = "-fx-border-color: gray;\n" 
-				+ "-fx-border-insets: 5;\n"
-                + "-fx-border-width: 2;\n"
-                + "-fx-border-style: solid;\n";
- 
-		vertBox.setStyle(cssLayout);		
-		
+				
 		initQ();
 	}
 	
@@ -269,11 +267,8 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 
 		int[] palette;
 		if (model.getSettings().radarMapMode == RadarMapMode.AMPLITUDE) {
-				
-			
-			
 			// fill file.amplScan
-			commandRegistry.runForFiles(new RadarMapScan(getArrayBuilder()));
+			commandRegistry.runForGprFiles(new RadarMapScan(getArrayBuilder()));
 			
 			palette = DblArray.paletteAmp;
 		} else {
@@ -287,7 +282,7 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 	}
 
 	public void drawCircles(MapField field, DblArray da) {
-		for (SgyFile file : model.getFileManager().getFiles()) {
+		for (SgyFile file : model.getFileManager().getGprFiles()) {
 			
 			ScanProfile profile = getFileScanProfile(file);
 			
@@ -310,10 +305,6 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 
 	public void drawFileCircles(MapField field, DblArray da, SgyFile file, 
 			ScanProfile profile, List<Trace> traces) {
-
-		if (file.isCsvFile())	{
-			return;
-		}	
 		
 		int radius = model.getSettings().radius;
 		int centerX = da.getWidth() / 2;
@@ -359,11 +350,12 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 	}
 	
 	public List<Node> getControlNodes() {
-		
-		vertBox.getChildren().clear();
-		
+		VBox vertBox = new VBox();
+
+		vertBox.setStyle(BORDER_STYLING);
+				
 		vertBox.getChildren().addAll(
-			Arrays.asList(
+			List.of(
 				//depthSlider.produce(),
 				//depthWindowSlider.produce(),
 				autoGainCheckbox.produce(),
@@ -373,7 +365,9 @@ public class RadarMap extends BaseLayer implements InitializingBean {
 				radiusSlider.produce()
 			));
 
-		return Arrays.asList(vertBox);
+		vertBox.setDisable(isActive());	
+
+		return List.of(vertBox);
 	}
 	
 	@Override
